--- a/SecretSanta.Web/Components/Layout/NavMenu.razor
+++ b/SecretSanta.Web/Components/Layout/NavMenu.razor
@@ -14,7 +14,7 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Counter
             </NavLink>
@@ -24,6 +24,6 @@
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested" aria-hidden="true"></span> Weather
             </NavLink>
-        </div>
+        </div> *@
     </nav>
 </div>
