--- a/SecretSanta.Web/Components/Pages/Home.razor.css
+++ b/SecretSanta.Web/Components/Pages/Home.razor.css
@@ -1,3 +1,11 @@
 ﻿.block > .row {
     padding: 5px;
 }
+
+.friend-label{
+    margin-top: 8px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
