why no worky???

--- a/SecretSanta.Web/Components/Pages/Home.razor
+++ b/SecretSanta.Web/Components/Pages/Home.razor
@@ -29,7 +29,7 @@
     </div>
 </div>
 <hr />
-<EditForm Model="Friends" FormName="sortear" OnValidSubmit="Sortear">
+<EditForm Model="Friends" FormName="sortear" OnValidSubmit="Draw">
     <DataAnnotationsValidator />
     <ValidationSummary />
     <CustomValidation @ref="customValidation" />
